--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -1,14 +1,14 @@
-﻿{
+{
   "$schema": "http://json.schemastore.org/launchsettings.json",
   "profiles": {
     "Routine.Api": {
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "api/companies",
-      "applicationUrl": "http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "applicationUrl": "http://localhost:5000"
     }
   }
 }
